stage 2 retry menu update

--- a/stage_2/game_over.html
+++ b/stage_2/game_over.html
@@ -129,14 +129,12 @@
 
 <div class = "container" id = "diedmenu">
 
-    <p class = "intro "> you're DEAD!!</p>
-    <p class = "obj"> BETTER LUCK NEXT TIME</p>
-
-
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+<h1>You are Dead<br><span>Better Luck Next Time</span></h1>
+<p class="blank"></p>
+<div class="container">
+<button onclick="location.href = 'index.html' "> Retry </button>
+<button onclick="location.href = '../index.html' "> Main Menu </button>
+</div>
 
 
 </div>
